--- a/playbook.yml
+++ b/playbook.yml
@@ -1,13 +1,36 @@
 ---
 - hosts: webservers
+  vars_files:
+    - vars/vars.yml
 
   tasks:
     - name: Set Up The Docker Repository
       apt:
         update_cache: yes
+        state: latest
         pkg:
           - apt-transport-https
           - ca-certificates
           - curl
           - gnupg-agent
           - software-properties-common
+
+    - name: Add Docker GPG apt key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
+
+    - name: Set lsb_release
+      ansible.builtin.shell: /usr/bin/lsb_release -cs
+      register: lsb_release
+
+    - name: Add Docker Repository
+      apt_repository:
+        repo: deb https://download.docker.com/linux/ubuntu lsb_release stable
+        state: present
+
+    - name: Update apt and Install Docker-ce
+      apt:
+        update_cache: yes
+        name: docker-ce
+        state: latest
