--- a/docker-install.yml
+++ b/docker-install.yml
@@ -22,12 +22,12 @@
         state: present
 
     - name: Set lsb_release
-      ansible.builtin.shell: /usr/bin/lsb_release -cs
+      shell: /usr/bin/lsb_release -cs
       register: lsb_release
 
     - name: Add Docker Repository
       apt_repository:
-        repo: deb https://download.docker.com/linux/ubuntu lsb_release stable
+        repo: deb https://download.docker.com/linux/ubuntu {{ lsb_release.stdout }} stable
         state: present
 
     - name: Update apt and Install Docker-ce
