--- a/docker-install.yml
+++ b/docker-install.yml
@@ -14,7 +14,7 @@
           - curl
           - gnupg-agent
           - software-properties-common
-          - python-pip
+          - python3-pip
 
     - name: Add Docker GPG apt key
       apt_key:
@@ -45,3 +45,5 @@
         name: "{{ container_name }}"
         image: "{{ container_image }}"
         state: present
+
+...
