--- a/openconnect/openconnect.yml
+++ b/openconnect/openconnect.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: fire up openconnect server!
       docker_container:
-        name: ovserv
+        name: ocserv
         image: tommylau/ocserv
         ports:
           - "443:443"
