--- a/shadowsocksr/shadowsocksr.yml
+++ b/shadowsocksr/shadowsocksr.yml
@@ -75,9 +75,11 @@
       file:
         path: /home/{{ user.stdout }}/ssr-n/build
         state: absent
-
-    - name: deploy
-      script: ./deploy.sh
+    
+    - name: download deploy script
+      get_url:
+        url: https://raw.githubusercontent.com/ShadowsocksR-Live/shadowsocksr-native/master/install/ssrn-install.sh
+        dest: /home/mohammadhosein/ssrn-install.sh
       args:
         creates: ssrn-install.sh
         chdir: /home/{{ user.stdout }}/ssr-n
