add python3-pexpect to ssr

--- a/shadowsocksr/shadowsocksr.yml
+++ b/shadowsocksr/shadowsocksr.yml
@@ -31,6 +31,7 @@
           - cmake
           - automake
           - gcc-multilib
+          - python3-pexpect
 
     - name: fix broken packages
       become: true
